test/files/neg/warn-useless-svuid.check
warn-useless-svuid.scala:2: warning: @SerialVersionUID has no effect on non-serializable classes
class X
      ^
warn-useless-svuid.scala:5: warning: @SerialVersionUID has no effect on non-serializable classes
class Y extends X
      ^
warn-useless-svuid.scala:17: warning: @SerialVersionUID has no effect on traits
trait T
      ^
warn-useless-svuid.scala:20: warning: @SerialVersionUID has no effect on traits
trait U extends scala.Serializable
      ^
warn-useless-svuid.scala:23: warning: @SerialVersionUID has no effect on traits
trait V extends java.io.Serializable
      ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
